fixes correction table visibility condition and deletes miliseconds from dates

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -550,7 +550,7 @@ form .ant-input-number {
       top: 40px;
       overflow: scroll;
       scrollbar-width: none;
-      max-height: 80vh;
+      max-height: 75vh;
       padding: 10px;
 
       &::-webkit-scrollbar {
